Fix for HOA floater appearing way too low.

--- a/src/css/fln/fln-calendar.scss
+++ b/src/css/fln/fln-calendar.scss
@@ -212,6 +212,9 @@
   border-radius: 2px;
 }
 
+input.hoa-input {
+  margin: 0;
+}
 input.hoa-input,
 select.hoa-dropdown {
   font-size: 1em;
